force-icon/main/default/objects/Client_Gift__c/Client_Gift__c.object-meta.xml
<CustomObject>
    <description>Gifts offered to a client</description>
    <label>Client Gift</label>
    <nameField>
        <displayFormat>G-{000000}</displayFormat>
        <label>Client Gift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Gifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>