force-icon/main/default/objects/Client_Gift__c/fields/CA_Name__c.field-meta.xml
<CustomField>
    <fullName>CA_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CA who realized the gift</description>
    <label>CA Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>