force-icon/main/default/objects/Client_Gift__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <description>Client linked to the gift</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Gifts</relationshipLabel>
    <relationshipName>Client_Gifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>