force-icon/main/default/objects/Client_Gift__c/fields/Gift_Item__c.field-meta.xml
<CustomField>
    <fullName>Gift_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Client&apos;s Gift information</description>
    <label>Gift Item</label>
    <referenceTo>GiftCatalog__c</referenceTo>
    <relationshipLabel>Client Gifts</relationshipLabel>
    <relationshipName>Client_Gifts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>