force-icon/main/default/objects/Client_Gift__c/fields/Gift_Store__c.field-meta.xml
<CustomField>
    <fullName>Gift_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Digital, retail and CSC store</description>
    <label>Gift Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Client Gifts</relationshipLabel>
    <relationshipName>Client_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>