force-icon/main/default/objects/Client_Gift__c/fields/Purchased_Product__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gift recorded into transaction</description>
    <label>Purchased Product</label>
    <referenceTo>PPR_PurchProduct__c</referenceTo>
    <relationshipLabel>Client Gifts</relationshipLabel>
    <relationshipName>Client_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>